amf-client/shared/src/test/resources/parser-results/raml/valid/points-in-path/api.raml
#%RAML 1.0
title: acc-claims-permission-experience-api
version: v1
mediaType: application/json
protocols:
  - HTTPS

baseUri: /api/acc-claim-permission/{version}

types:
  Resource: !include /path2.0.1/fragment.raml
